# opentyrian

./: .gitignore  CMakeLists.txt
src/: config.c  joystick.c  loudness.c  mainint.c  mouse.c  opentyr.c  opentyr.h  video.c
